# axonchainv3

./: .env.example  .gitignore  README.md  hardhat.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt
contracts/: CrossChainOtcEscrow.sol
contracts/test/: MockERC20.sol
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: config.js  main.js  styles.css
scripts/: deploy-otc.js
src/: __init__.py  api_server.py  cli.py  otc_client.py
src/abi/: otc_v7.json
test/: CrossChainOtcEscrow.js
